# ChangeLog for net-www/skipstone
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/skipstone/Attic/ChangeLog,v 1.7 2002/04/18 14:14:09 seemant Exp $

*skipstone-0.8.1-r2 (18 Apr 2002)

  18 Apr 2002; Seemant Kulleen <seemant@gentoo.org> skipstone-0.8.1-r2.ebuild :

  More translation fixes.  This closes bug report #1907 reported by
  awaschb@gwdg.de (Andreas Waschbuesch)

*skipstone-0.8.1 (28 Mar 2002)

  28 Mar 2002; Seemant Kulleen <seemant@gentoo.org> skipstone-0.8.1.ebuild :

  Version bump.  Another one expected tomorrow.

*skipstone-0.8.0-r1 (27 Mar 2002)

  27 Mar 2002; Seemant Kulleen <seemant@gentoo.org> skipstone-0.8.0-r1.ebuild :

  There seems to be an issue with the Russian translation set from upstream,
  involving duplicate entries which caused a compilation failure for nls in USE.
  I am in communication (hopefully) with upstream about this, but in the
  meantime I have added a patch which removes the duplicate entries.

*skipstone-0.8.0 (27 Mar 2002)

  27 Mar 2002; Bruce A. Locke <blocke@shivan.org> skipstone-0.8.0.ebuild :

  Skipstone 0.8.0 with ebuild cleanup

*skipstone-0.7.9 (23 Feb 2002)

  12 Mar 2002; T.Neidt <tod@gentoo.org> ChangeLog, skipstone-0.7.9.ebuild :

  Changed mozilla dependency to ~net-www/mozilla- 0.9.8.
  Will have to wait for next release of skipstone to support mozilla-0.9.9
  Partial fix of Bug# 1092, thanks Andreas Waschbuesch.
  
  23 Feb 2002; T.Neidt <tod@gentoo.org> ChangeLog, skipstone-0.7.9.ebuild :

  Updated version; works with latest mozilla ( 0.9.8 ).

*skipstone-0.7.7 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about