@@ -1,0 +1,1 @@
+MD5 2ab982407dd5ed467d068b8af8659e55 skipstone-0.8.2.tar.gz 420922
